--- a/reports/report_contract_addendum.xml
+++ b/reports/report_contract_addendum.xml
@@ -175,10 +175,14 @@
                                     <div><t t-esc="doc.partner_id.name"/></div>
                                 </div>
                                 <div class="col-6 text-center">
-                                    <p class="m-0"><strong>Firma de LA EMPRESA</strong></p>
-                                    <p class="m-0">/sn2/</p>
+                                    <p class="m-0"><strong>Redes Litorales SA de CV</strong></p>
+                                    <div class="mt-1" style="white-space: nowrap;">
+                                        <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
+                                        <span style="display: inline-block; width: 10px;"></span>
+                                        <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                    </div>
                                     <div class="mt-4">_______________________________</div>
-                                    <div>Redes Litorales SA de CV</div>
+                                    <div>Representante Legal</div>
                                 </div>
                             </div>
                         </div>
@@ -207,10 +211,14 @@
                                 <div><t t-esc="doc.partner_id.name"/></div>
                             </div>
                             <div class="col-6 text-center">
-                                <p class="m-0"><strong>LA EMPRESA</strong></p>
-                                <p class="m-0">/sn2/</p>
+                                <p class="m-0"><strong>Redes Litorales SA de CV</strong></p>
+                                    <div class="mt-1" style="white-space: nowrap;">
+                                        <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
+                                        <span style="display: inline-block; width: 10px;"></span>
+                                        <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                    </div>
                                 <div class="mt-4">_______________________________</div>
-                                <div>Redes Litorales SA de CV</div>
+                                <div>Representante Legal</div>
                                 <p class ="m-0">/st2/</p>
                             </div>
                         </div>
