--- a/reports/report_contract_template.xml
+++ b/reports/report_contract_template.xml
@@ -164,8 +164,12 @@
                                 </div>
                                 <div class="col-4"/>
                                 <div class="col-2 text-center">
-                                    <p style="font-size: 13px"><strong>Firma del Vendedor</strong></p>
-                                    <p style="color: white;">/sn2/</p> 
+                                    <p style="font-size: 13px"><strong>Redes Litorales SA de CV</strong></p>
+                                    <div class="mt-1" style="white-space: nowrap;">
+                                        <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
+                                        <span style="display: inline-block; width: 10px;"></span>
+                                        <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                    </div>
                                 </div>
                                 <div class="col-4"/>
                             </div>
@@ -180,7 +184,7 @@
                                 <div class="col-2"/>
                                 <div class="col-4 text-start">
                                     <div class="mt-4 border-top pt-2">
-                                        <t t-esc="doc.user_id.name"/>
+                                        Representante Legal
                                     </div>
                                 </div>
                             </div>
@@ -471,8 +475,11 @@
                                 </div>
                                 <div class="col-4"/>
                                 <div class="col-2 text-center">
-                                    <p style="font-size: 13px"><strong>Firma del Vendedor</strong></p>
-                                    <p style="color: white;">/sn2/</p> 
+                                    <p style="font-size: 13px"><strong>Redes Litorales SA de CV</strong></p>
+                                    <div class="mt-1" style="display: inline-flex; align-items: center; gap: 10px;">
+                                        <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
+                                        <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                    </div>
                                 </div>
                                 <div class="col-4"/>
                             </div>
@@ -487,7 +494,7 @@
                                 <div class="col-2"/>
                                 <div class="col-4 text-start">
                                     <div class="mt-4 border-top pt-2">
-                                        <t t-esc="doc.user_id.name"/>
+                                        Representante Legal
                                     </div>
                                 </div>
                             </div>
@@ -778,8 +785,11 @@
                                 </div>
                                 <div class="col-4"/>
                                 <div class="col-2 text-center">
-                                    <p style="font-size: 13px"><strong>Firma del Vendedor</strong></p>
-                                    <p style="color: white;">/sn2/</p> 
+                                    <p style="font-size: 13px"><strong>Redes Litorales SA de CV</strong></p>                                    <p style="color: white;">/sn2/</p> 
+                                    <div class="mt-1" style="display: inline-flex; align-items: center; gap: 10px;">
+                                        <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
+                                        <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                    </div>
                                 </div>
                                 <div class="col-4"/>
                             </div>
@@ -794,7 +804,7 @@
                                 <div class="col-2"/>
                                 <div class="col-4 text-start">
                                     <div class="mt-4 border-top pt-2">
-                                        <t t-esc="doc.user_id.name"/>
+                                        Representante Legal
                                     </div>
                                 </div>
                             </div>
@@ -1085,8 +1095,11 @@
                                 </div>
                                 <div class="col-4"/>
                                 <div class="col-2 text-center">
-                                    <p style="font-size: 13px"><strong>Firma del Vendedor</strong></p>
-                                    <p style="color: white;">/sn2/</p> 
+                                    <p style="font-size: 13px"><strong>Redes Litorales SA de CV</strong></p>                                    <p style="color: white;">/sn2/</p> 
+                                    <div class="mt-1" style="display: inline-flex; align-items: center; gap: 10px;">
+                                        <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
+                                        <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                    </div>
                                 </div>
                                 <div class="col-4"/>
                             </div>
@@ -1101,7 +1114,7 @@
                                 <div class="col-2"/>
                                 <div class="col-4 text-start">
                                     <div class="mt-4 border-top pt-2">
-                                        <t t-esc="doc.user_id.name"/>
+                                        Representante Legal
                                     </div>
                                 </div>
                             </div>
@@ -1392,8 +1405,11 @@
                                 </div>
                                 <div class="col-4"/>
                                 <div class="col-2 text-center">
-                                    <p style="font-size: 13px"><strong>Firma del Vendedor</strong></p>
-                                    <p style="color: white;">/sn2/</p> 
+                                    <p style="font-size: 13px"><strong>Redes Litorales SA de CV</strong></p>                                    <p style="color: white;">/sn2/</p> 
+                                    <div class="mt-1" style="display: inline-flex; align-items: center; gap: 10px;">
+                                        <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
+                                        <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                    </div>
                                 </div>
                                 <div class="col-4"/>
                             </div>
@@ -1408,7 +1424,7 @@
                                 <div class="col-2"/>
                                 <div class="col-4 text-start">
                                     <div class="mt-4 border-top pt-2">
-                                        <t t-esc="doc.user_id.name"/>
+                                        Representante Legal
                                     </div>
                                 </div>
                             </div>
