--- a/reports/report_contract_template.xml
+++ b/reports/report_contract_template.xml
@@ -165,10 +165,17 @@
                                 <div class="col-4"/>
                                 <div class="col-2 text-center">
                                     <p style="font-size: 13px"><strong>Redes Litorales SA de CV</strong></p>
-                                    <div class="mt-1" style="white-space: nowrap;">
-                                        <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
-                                        <span style="display: inline-block; width: 10px;"></span>
-                                        <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                    <div class="mt-1" style="display: inline-block;">
+                                        <table style="margin: 0 auto;">
+                                            <tr>
+                                                <td style="padding-right: 8px; vertical-align: middle;">
+                                                    <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
+                                                </td>
+                                                <td style="vertical-align: middle;">
+                                                    <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                                </td>
+                                            </tr>
+                                        </table>
                                     </div>
                                 </div>
                                 <div class="col-4"/>
@@ -476,9 +483,17 @@
                                 <div class="col-4"/>
                                 <div class="col-2 text-center">
                                     <p style="font-size: 13px"><strong>Redes Litorales SA de CV</strong></p>
-                                    <div class="mt-1" style="display: inline-flex; align-items: center; gap: 10px;">
-                                        <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
-                                        <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                    <div class="mt-1" style="display: inline-block;">
+                                        <table style="margin: 0 auto;">
+                                            <tr>
+                                                <td style="padding-right: 8px; vertical-align: middle;">
+                                                    <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
+                                                </td>
+                                                <td style="vertical-align: middle;">
+                                                    <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                                </td>
+                                            </tr>
+                                        </table>
                                     </div>
                                 </div>
                                 <div class="col-4"/>
@@ -786,9 +801,17 @@
                                 <div class="col-4"/>
                                 <div class="col-2 text-center">
                                     <p style="font-size: 13px"><strong>Redes Litorales SA de CV</strong></p>                                    <p style="color: white;">/sn2/</p> 
-                                    <div class="mt-1" style="display: inline-flex; align-items: center; gap: 10px;">
-                                        <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
-                                        <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                    <div class="mt-1" style="display: inline-block;">
+                                        <table style="margin: 0 auto;">
+                                            <tr>
+                                                <td style="padding-right: 8px; vertical-align: middle;">
+                                                    <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
+                                                </td>
+                                                <td style="vertical-align: middle;">
+                                                    <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                                </td>
+                                            </tr>
+                                        </table>
                                     </div>
                                 </div>
                                 <div class="col-4"/>
@@ -1096,9 +1119,17 @@
                                 <div class="col-4"/>
                                 <div class="col-2 text-center">
                                     <p style="font-size: 13px"><strong>Redes Litorales SA de CV</strong></p>                                    <p style="color: white;">/sn2/</p> 
-                                    <div class="mt-1" style="display: inline-flex; align-items: center; gap: 10px;">
-                                        <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
-                                        <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                    <div class="mt-1" style="display: inline-block;">
+                                        <table style="margin: 0 auto;">
+                                            <tr>
+                                                <td style="padding-right: 8px; vertical-align: middle;">
+                                                    <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
+                                                </td>
+                                                <td style="vertical-align: middle;">
+                                                    <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                                </td>
+                                            </tr>
+                                        </table>
                                     </div>
                                 </div>
                                 <div class="col-4"/>
@@ -1406,9 +1437,17 @@
                                 <div class="col-4"/>
                                 <div class="col-2 text-center">
                                     <p style="font-size: 13px"><strong>Redes Litorales SA de CV</strong></p>                                    <p style="color: white;">/sn2/</p> 
-                                    <div class="mt-1" style="display: inline-flex; align-items: center; gap: 10px;">
-                                        <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
-                                        <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                    <div class="mt-1" style="display: inline-block;">
+                                        <table style="margin: 0 auto;">
+                                            <tr>
+                                                <td style="padding-right: 8px; vertical-align: middle;">
+                                                    <img src="/contract_management/static/description/corporate_seal_original.jpg" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Sello Redes Litorales"/>
+                                                </td>
+                                                <td style="vertical-align: middle;">
+                                                    <img src="/contract_management/static/description/signature.png" style="max-height: 60px; vertical-align: middle; display: inline-block;" alt="Firma Redes Litorales"/>
+                                                </td>
+                                            </tr>
+                                        </table>
                                     </div>
                                 </div>
                                 <div class="col-4"/>
